<resources>
    <string name="app_name">AndroidFundamentals</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="country">Country</string>
    <string name="apply">Apply</string>
    <string name="lesson_5_name"><![CDATA[5. Layout Basics & Linear Layout]]></string>
    <string name="lesson_7_name">7. Chains and guidelines</string>
    <string name="add_one">+1</string>
    <string name="let_s_count_together">Let\'s count together: 0</string>
    <string name="lesson_9_name">9. TextViews</string>
    <string name="first_number">First Number</string>
    <string name="second_number">Second Number</string>
    <string name="result">Result</string>
    <string name="add">Add</string>
    <string name="lesson_10_name">10. EditTexts</string>
    <string name="lesson_11_name">11. ImageViews</string>
    <string name="add_image">Add Image</string>
    <string name="order">Order</string>
    <string name="onions">Onions</string>
    <string name="pork">Pork</string>
    <string name="chicken">Chicken</string>
    <string name="beef">Beef</string>
    <string name="salad">Salad</string>
    <string name="cheese">Cheese</string>
    <string name="what_do_you_want_on_your_burger">What do you want on your burger?</string>
    <string name="lesson_12_name">12. CheckBox and RadioButton</string>
    <string name="lesson_13_name">13. Toasts and Context</string>
    <string name="default_toast">Default Toast</string>
    <string name="custom_toast">Custom Toast</string>
    <string name="this_is_a_custom_toast">This is a custom toast!</string>
    <string name="lesson_14_name">14. Intents and Starting Activities</string>
    <string name="next">Next</string>
    <string name="hey_this_is_the_second_activity">Hey, this is the second activity!</string>
    <string name="back">Back</string>
    <string name="lesson_15_name">15. Passing Data Between Activities</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="this_person_will_be_passed_by_the_class">This person\'s info will be passed by the class</string>
    <string name="this_person_will_be_passed_separately">This person\'s info will be passes separately</string>
    <string name="request_permissions">Request Permissions</string>
    <string name="lesson_16_name">16. Permissions</string>
</resources>