<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnFiveLesson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lesson_5_name" />

    <Button
        android:id="@+id/btnSevenLesson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lesson_7_name" />

    <Button
        android:id="@+id/btnNineLesson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lesson_9_name" />

</LinearLayout>